feat: ✨ Update package configuration and enhance RequestClient tests
- Added "type": "module" to package.json for ES module support.
- Configured Vitest to target Node 18 in vitest.config.ts.
- Updated RequestClient tests to include cache in the configuration and added type annotations for ZodSchema.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "packageManager": "pnpm@8.15.6",
   "license": "MIT",
   "scripts": {
