--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "async-mutex": "^0.5.0",
     "jwt-decode": "^4.0.0",
+    "neverthrow": "^8.2.0",
     "zod": "^3.22.4"
   }
 }
