--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
-  "name": "ghin",
+  "name": "@spicygolf/ghin",
   "description": "⛳ An unofficial api wrapper for the Golf Handicap and Information Network (GHIN)",
   "version": "0.7.0",
   "author": {
     "name": "Nate Clark",
     "url": "https://github.com/n8io"
+  },
+  "contributors": [
+    {
+      "name": "Brad Anderson",
+      "url": "https://github.com/boorad"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/boorad/ghin.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "engines": {
     "node": ">=18"
