--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,8 @@ jobs:
       - name: 📘 Create PR or Publish
         uses: changesets/action@v1
         with:
+          version: pnpm exec changeset version
           publish: pnpm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
