--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
@@ -47,6 +48,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "dotenv": "^16.4.5",
+    "husky": "^9.1.7",
     "tsup": "^8.0.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5",
