--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,7 @@ jobs:
         run: pnpm exec biome check ./src
       - name: 🚨 Lint code
         run: pnpm run lint
+      - name: 🧪 Run tests
+        run: pnpm run test:run
       - name: 🧱 Build
         run: npm run build
