--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,17 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "bun",
-            "request": "launch",
-            "name": "playground",
-            "program": "${workspaceFolder}/playground.ts",
-        },
-        {
-            "type": "bun",
-            "request": "launch",
-            "name": "playground (api)",
-            "program": "${workspaceFolder}/playground-api.ts",
-        },
-    ],
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "bun",
+      "request": "launch",
+      "name": "playground",
+      "program": "${workspaceFolder}/src/playground/ghin.ts"
+    },
+    {
+      "type": "bun",
+      "request": "launch",
+      "name": "playground (api)",
+      "program": "${workspaceFolder}/src/playground/gpa.ts"
+    }
+  ]
 }
