--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "build": "rm -rf ./dist && tsup src/index.ts --format cjs,esm --dts",
     "changeset": "npx changeset",
-    "dev": "pnpm --package=tsx --package=dotenv -s dlx tsx -r dotenv/config playground.ts",
+    "dev": "pnpm --package=tsx --package=dotenv -s dlx tsx -r dotenv/config src/playground/ghin.ts",
     "format": "biome check --write ./src",
     "lint": "biome lint ./src && tsc",
     "release": "pnpm run build && changeset publish",
