--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,19 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
+      - uses: oven-sh/setup-bun@v2
         with:
-          version: 8
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 24.x
-          cache: "pnpm"
+          bun-version: 1.3.2
       - name: 🔽 Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
       - name: 📘 Create PR or Publish
         uses: changesets/action@v1
         with:
-          version: pnpm exec changeset version
-          publish: pnpm run release
+          version: bun changeset version
+          publish: bun run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
