--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "bun@1.3.2",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./dist && tsup src/index.ts --format cjs,esm --dts",
     "changeset": "npx changeset",
-    "dev": "pnpm --package=tsx --package=dotenv -s dlx tsx -r dotenv/config playground.ts",
+    "dev": "bun --bun run src/playground/ghin.ts",
     "format": "biome check --write ./src",
     "lint": "biome lint ./src && tsc",
-    "release": "pnpm run build && changeset publish",
+    "release": "bun run build && changeset publish",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
